<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieMastery</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_submit_question_actiivty">SubmitQuestionActiivty</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="action_log_out">Log out</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="retrofit_link"><a href="http://square.github.io/retrofit/">Retrofit</a></string>
    <string name="butterknife_link"><a href="http://jakewharton.github.io/butterknife/">Butterknife</a></string>
    <string name="guava_link"><a href="https://github.com/google/guava">Guava</a></string>
    <string name="apache_commons_link"><a href="http://commons.apache.org/">Apache Commons</a></string>
    <string name="easy_adapter_link"><a href="https://github.com/ribot/easy-adapter">Easy Adapter</a></string>
    <string name="title_activity_previous_games">PreviousGamesActivity</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="main_menu">Main Menu</string>
    <string name="question_set_liked">Question set liked</string>
    <string name="question_set_disliked">Question set disliked</string>
    <string name="faile_login_message">Failed to login, please try again</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login\u0020\u0020\u0020\u0020</string>
    <string name="next_question">Next Question</string>
    <string name="new_game">New game</string>
    <string name="previous_games">Previous games</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="correct_answer">CORRECT!</string>
    <string name="time_up_answer">TIME\'S UP!</string>

</resources>
