<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.moviemastery.moviemastery.activity.OverviewActivity">

    <TextView
        android:id="@+id/loggedinTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Logged in as:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/loggedinTitleLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/loggedinTitleLabel"
        android:layout_toRightOf="@+id/loggedinTitleLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/startGameButton"
        style="@style/overview_button"
        android:layout_below="@+id/loggedinTitleLabel"
        android:layout_marginTop="20dp"
        android:text="@string/new_game" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/previousGamesButton"
        style="@style/overview_button"
        android:layout_below="@+id/startGameButton"
        android:layout_marginTop="12dp"
        android:text="@string/previous_games" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/leaderboardButton"
        style="@style/overview_button"
        android:layout_below="@+id/previousGamesButton"
        android:layout_marginTop="12dp"
        android:text="@string/leaderboard" />

    <TextView
        android:id="@+id/previousGamesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/leaderboardButton"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Previous Games"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/previousGamesList"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/previousGamesLabel"
        android:layout_marginTop="20dp"
        tools:context="org.moviemastery.moviemastery.activity.OverviewActivity" />

</RelativeLayout>
